Fix HTML encoding issues in English options page

--- a/start-page2/Level 1/subject_level1_english_options.html
+++ b/start-page2/Level 1/subject_level1_english_options.html
@@ -273,7 +273,7 @@
 
       <div class="card" data-level="34">
         <div class="card-icon">I</div>
-        <h3 class="card-title">Verbs Pronounsl</h3>
+        <h3 class="card-title">Verbs Pronouns</h3>
         <p class="card-desc">Image</p>
         <a href="../../question/level-1/English/level1_eng_verbs_pronouns.html" class="card-btn">Start</a>
       </div>
@@ -285,5 +285,6 @@
   <script src="../../js/partials.js"></script>
 </body>
 </html>
+
 
 
