--- a/question/Level 1 Maths/Level_1_maths_Number_Bonds_to_10.html
+++ b/question/Level 1 Maths/Level_1_maths_Number_Bonds_to_10.html
@@ -22,27 +22,27 @@
 
   <script>
     const questions = [
-      { question: "What number makes 0 + __ = 10?", options: ["10","9","8"], correct: "10", explanation: "0 + 10 = 10." },
-      { question: "What number makes 1 + __ = 10?", options: ["8","9","7"], correct: "9", explanation: "1 + 9 = 10." },
-      { question: "What number makes 2 + __ = 10?", options: ["6","7","8"], correct: "8", explanation: "2 + 8 = 10." },
-      { question: "What number makes 3 + __ = 10?", options: ["6","7","5"], correct: "7", explanation: "3 + 7 = 10." },
-      { question: "What number makes 4 + __ = 10?", options: ["5","7","6"], correct: "6", explanation: "4 + 6 = 10." },
-      { question: "What number makes 5 + __ = 10?", options: ["5","4","6"], correct: "5", explanation: "5 + 5 = 10." },
-      { question: "What number makes 6 + __ = 10?", options: ["3","4","5"], correct: "4", explanation: "6 + 4 = 10." },
-      { question: "What number makes 7 + __ = 10?", options: ["2","3","1"], correct: "3", explanation: "7 + 3 = 10." },
-      { question: "What number makes 8 + __ = 10?", options: ["1","3","2"], correct: "2", explanation: "8 + 2 = 10." },
-      { question: "What number makes 9 + __ = 10?", options: ["0","2","1"], correct: "1", explanation: "9 + 1 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>0 + __ = 10</span>", options: ["10","9","8"], correct: "10", explanation: "0 + 10 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>1 + __ = 10</span>", options: ["8","9","7"], correct: "9", explanation: "1 + 9 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>2 + __ = 10</span>", options: ["6","7","8"], correct: "8", explanation: "2 + 8 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>3 + __ = 10</span>", options: ["6","7","5"], correct: "7", explanation: "3 + 7 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>4 + __ = 10</span>", options: ["5","7","6"], correct: "6", explanation: "4 + 6 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>5 + __ = 10</span>", options: ["5","4","6"], correct: "5", explanation: "5 + 5 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>6 + __ = 10</span>", options: ["3","4","5"], correct: "4", explanation: "6 + 4 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>7 + __ = 10</span>", options: ["2","3","1"], correct: "3", explanation: "7 + 3 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>8 + __ = 10</span>", options: ["1","3","2"], correct: "2", explanation: "8 + 2 = 10." },
+      { question: "Pick the number that makes 10.<br><span style='color:black'>9 + __ = 10</span>", options: ["0","2","1"], correct: "1", explanation: "9 + 1 = 10." },
 
-      { question: "Complete: __ + 0 = 10", options: ["8","9","10"], correct: "10", explanation: "10 + 0 = 10." },
-      { question: "Complete: __ + 1 = 10", options: ["8","9","7"], correct: "9", explanation: "9 + 1 = 10." },
-      { question: "Complete: __ + 2 = 10", options: ["6","7","8"], correct: "8", explanation: "8 + 2 = 10." },
-      { question: "Complete: __ + 3 = 10", options: ["7","6","5"], correct: "7", explanation: "7 + 3 = 10." },
-      { question: "Complete: __ + 4 = 10", options: ["5","6","4"], correct: "6", explanation: "6 + 4 = 10." },
-      { question: "Complete: __ + 5 = 10", options: ["4","5","6"], correct: "5", explanation: "5 + 5 = 10." },
-      { question: "Complete: __ + 6 = 10", options: ["3","4","5"], correct: "4", explanation: "4 + 6 = 10." },
-      { question: "Complete: __ + 7 = 10", options: ["1","2","3"], correct: "3", explanation: "3 + 7 = 10." },
-      { question: "Complete: __ + 8 = 10", options: ["1","2","0"], correct: "2", explanation: "2 + 8 = 10." },
-      { question: "Complete: __ + 9 = 10", options: ["1","0","2"], correct: "1", explanation: "1 + 9 = 10." }
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 0 = 10</span>", options: ["8","9","10"], correct: "10", explanation: "10 + 0 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 1 = 10</span>", options: ["8","9","7"], correct: "9", explanation: "9 + 1 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 2 = 10</span>", options: ["6","7","8"], correct: "8", explanation: "8 + 2 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 3 = 10</span>", options: ["7","6","5"], correct: "7", explanation: "7 + 3 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 4 = 10</span>", options: ["5","6","4"], correct: "6", explanation: "6 + 4 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 5 = 10</span>", options: ["4","5","6"], correct: "5", explanation: "5 + 5 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 6 = 10</span>", options: ["3","4","5"], correct: "4", explanation: "4 + 6 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 7 = 10</span>", options: ["1","2","3"], correct: "3", explanation: "3 + 7 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 8 = 10</span>", options: ["1","2","0"], correct: "2", explanation: "2 + 8 = 10." },
+      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 9 = 10</span>", options: ["1","0","2"], correct: "1", explanation: "1 + 9 = 10." }
     ];
   </script>
 
