Add new math options for Level 1

--- a/start-page2/Level 1/Level1_math_options.html
+++ b/start-page2/Level 1/Level1_math_options.html
@@ -272,6 +272,28 @@
         <a href="../../question/Level 1 Maths/level_1_place_value.html" class="card-btn">Start</a>
       </div>
 
+      <div class="card" data-level="33">
+  <div class="card-icon">➕</div>
+  <h3 class="card-title">Number Bonds to 10</h3>
+  <p class="card-desc">Make 10</p>
+  <a href='../../question/Level 1 Maths/Level_1_maths_Number_Bonds_to_10.html' class="card-btn">Start</a>
+</div>
+
+<div class="card" data-level="34">
+  <div class="card-icon">🔢</div>
+  <h3 class="card-title">Compare Numbers</h3>
+  <p class="card-desc">&gt;, &lt;, =</p>
+  <a href='../../question/Level 1 Maths/Level_1_maths_Compare_Numbers.html' class="card-btn">Start</a>
+</div>
+
+<div class="card" data-level="35">
+  <div class="card-icon">🔎</div>
+  <h3 class="card-title">Missing Number 0 to 20</h3>
+  <p class="card-desc">Find the number</p>
+  <a href='../../question/Level 1 Maths/Level_1_maths_Missing_Number_0_to_20.html' class="card-btn">Start</a>
+</div>
+
+
       
     </div>
   </main>
