--- a/question/Level 1 Maths/Level_1_maths_Number_Bonds_to_10.html
+++ b/question/Level 1 Maths/Level_1_maths_Number_Bonds_to_10.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Number Bonds to 10</title>
-  <link rel="stylesheet" href="../../../css/question.css" />
-</head>
-<body>
-  <div id="site-header-placeholder"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Number Bonds to 10</title>
+    <link rel="stylesheet" href="../../css/question.css" />
+  </head>
+  <body>
 
-  <main class="quiz-container">
-    <div class="question-section">
-      <h3 id="question-text">Loading…</h3>
-      <ul id="options-list" class="options"></ul>
-    </div>
-    <div id="feedback" class="hidden"></div>
-    <div id="explanation" class="hidden"></div>
-    <button id="back-btn" class="hidden">Back</button>
-    <button id="next-btn" class="hidden">Next</button>
-  </main>
+    <div id="site-header-placeholder"></div>
 
-  <script>
-    const questions = [
-      { question: "Pick the number that makes 10.<br><span style='color:black'>0 + __ = 10</span>", options: ["10","9","8"], correct: "10", explanation: "0 + 10 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>1 + __ = 10</span>", options: ["8","9","7"], correct: "9", explanation: "1 + 9 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>2 + __ = 10</span>", options: ["6","7","8"], correct: "8", explanation: "2 + 8 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>3 + __ = 10</span>", options: ["6","7","5"], correct: "7", explanation: "3 + 7 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>4 + __ = 10</span>", options: ["5","7","6"], correct: "6", explanation: "4 + 6 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>5 + __ = 10</span>", options: ["5","4","6"], correct: "5", explanation: "5 + 5 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>6 + __ = 10</span>", options: ["3","4","5"], correct: "4", explanation: "6 + 4 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>7 + __ = 10</span>", options: ["2","3","1"], correct: "3", explanation: "7 + 3 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>8 + __ = 10</span>", options: ["1","3","2"], correct: "2", explanation: "8 + 2 = 10." },
-      { question: "Pick the number that makes 10.<br><span style='color:black'>9 + __ = 10</span>", options: ["0","2","1"], correct: "1", explanation: "9 + 1 = 10." },
+    <main class="quiz-container">
+      <div class="question-section">
+        <h3 id="question-text">Loading...</h3>
+        <ul class="options" id="options-list"></ul>
+      </div>
+      <div id="feedback" class="hidden"></div>
+      <div id="explanation" class="hidden"></div>
+      <button id="back-btn" class="hidden" onclick="loadPreviousQuestion()">Back</button>
+      <button id="next-btn" class="hidden" onclick="loadNextQuestion()">Next</button>
+    </main>
 
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 0 = 10</span>", options: ["8","9","10"], correct: "10", explanation: "10 + 0 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 1 = 10</span>", options: ["8","9","7"], correct: "9", explanation: "9 + 1 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 2 = 10</span>", options: ["6","7","8"], correct: "8", explanation: "8 + 2 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 3 = 10</span>", options: ["7","6","5"], correct: "7", explanation: "7 + 3 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 4 = 10</span>", options: ["5","6","4"], correct: "6", explanation: "6 + 4 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 5 = 10</span>", options: ["4","5","6"], correct: "5", explanation: "5 + 5 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 6 = 10</span>", options: ["3","4","5"], correct: "4", explanation: "4 + 6 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 7 = 10</span>", options: ["1","2","3"], correct: "3", explanation: "3 + 7 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 8 = 10</span>", options: ["1","2","0"], correct: "2", explanation: "2 + 8 = 10." },
-      { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 9 = 10</span>", options: ["1","0","2"], correct: "1", explanation: "1 + 9 = 10." }
-    ];
-  </script>
+<script>
+  const questions = [
+    { question: "Pick the number that makes 10.<br><span style='color:black'>0 + __ = 10</span>",  options: ["10","9"], correct: "10", explanation: "0 + 10 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>1 + __ = 10</span>",  options: ["9","8"],  correct: "9",  explanation: "1 + 9 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>2 + __ = 10</span>",  options: ["8","7"],  correct: "8",  explanation: "2 + 8 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>3 + __ = 10</span>",  options: ["7","6"],  correct: "7",  explanation: "3 + 7 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>4 + __ = 10</span>",  options: ["6","5"],  correct: "6",  explanation: "4 + 6 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>5 + __ = 10</span>",  options: ["5","4"],  correct: "5",  explanation: "5 + 5 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>6 + __ = 10</span>",  options: ["4","3"],  correct: "4",  explanation: "6 + 4 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>7 + __ = 10</span>",  options: ["3","2"],  correct: "3",  explanation: "7 + 3 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>8 + __ = 10</span>",  options: ["2","1"],  correct: "2",  explanation: "8 + 2 = 10." },
+    { question: "Pick the number that makes 10.<br><span style='color:black'>9 + __ = 10</span>",  options: ["1","0"],  correct: "1",  explanation: "9 + 1 = 10." },
 
-  <div id="site-footer-placeholder"></div>
-  <script src="../../../js/script.js"></script>
-  <script src="../../../js/partials.js"></script>
-  <script>window.addEventListener("DOMContentLoaded",()=>{initMCQQuiz(questions);});</script>
-</body>
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 0 = 10</span>",      options: ["10","9"], correct: "10", explanation: "10 + 0 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 1 = 10</span>",      options: ["9","8"],  correct: "9",  explanation: "9 + 1 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 2 = 10</span>",      options: ["8","7"],  correct: "8",  explanation: "8 + 2 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 3 = 10</span>",      options: ["7","6"],  correct: "7",  explanation: "7 + 3 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 4 = 10</span>",      options: ["6","5"],  correct: "6",  explanation: "6 + 4 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 5 = 10</span>",      options: ["5","4"],  correct: "5",  explanation: "5 + 5 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 6 = 10</span>",      options: ["4","3"],  correct: "4",  explanation: "4 + 6 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 7 = 10</span>",      options: ["3","2"],  correct: "3",  explanation: "3 + 7 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 8 = 10</span>",      options: ["2","1"],  correct: "2",  explanation: "2 + 8 = 10." },
+    { question: "Fill the blank to make 10.<br><span style='color:black'>__ + 9 = 10</span>",      options: ["1","0"],  correct: "1",  explanation: "1 + 9 = 10." }
+  ];
+</script>
+
+    <div id="site-footer-placeholder"></div>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+        initMCQQuiz(questions);
+      });
+    </script>
+  </body>
 </html>
