--- a/question/Level 1 Maths/Level_1_maths_Compare_Numbers.html
+++ b/question/Level 1 Maths/Level_1_maths_Compare_Numbers.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Compare Numbers</title>
-  <link rel="stylesheet" href="../../../css/question.css" />
-</head>
-<body>
-  <div id="site-header-placeholder"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Compare Numbers</title>
+    <link rel="stylesheet" href="../../css/question.css" />
+  </head>
+  <body>
 
-  <main class="quiz-container">
-    <div class="question-section">
-      <h3 id="question-text">Loading…</h3>
-      <ul id="options-list" class="options"></ul>
-    </div>
-    <div id="feedback" class="hidden"></div>
-    <div id="explanation" class="hidden"></div>
-    <button id="back-btn" class="hidden">Back</button>
-    <button id="next-btn" class="hidden">Next</button>
-  </main>
+    <div id="site-header-placeholder"></div>
 
-  <script>
-    // Choose the correct sign: > , < , =
-    const S = [">","<","="];
-    const questions = [
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>3 __ 1</span>", options: S, correct: ">", explanation: "3 is greater than 1." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>2 __ 5</span>", options: S, correct: "<", explanation: "2 is less than 5." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>4 __ 4</span>", options: S, correct: "=", explanation: "Both are equal." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>9 __ 7</span>", options: S, correct: ">", explanation: "9 is greater than 7." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>6 __ 8</span>", options: S, correct: "<", explanation: "6 is less than 8." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>10 __ 10</span>", options: S, correct: "=", explanation: "Both are equal." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>0 __ 2</span>", options: S, correct: "<", explanation: "0 is less than 2." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>12 __ 9</span>", options: S, correct: ">", explanation: "12 is greater than 9." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>5 __ 11</span>", options: S, correct: "<", explanation: "5 is less than 11." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>14 __ 14</span>", options: S, correct: "=", explanation: "Both are equal." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>15 __ 13</span>", options: S, correct: ">", explanation: "15 is greater than 13." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>7 __ 10</span>", options: S, correct: "<", explanation: "7 is less than 10." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>18 __ 16</span>", options: S, correct: ">", explanation: "18 is greater than 16." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>4 __ 12</span>", options: S, correct: "<", explanation: "4 is less than 12." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>20 __ 19</span>", options: S, correct: ">", explanation: "20 is greater than 19." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>3 __ 3</span>", options: S, correct: "=", explanation: "Both are equal." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>1 __ 9</span>", options: S, correct: "<", explanation: "1 is less than 9." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>17 __ 6</span>", options: S, correct: ">", explanation: "17 is greater than 6." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>8 __ 8</span>", options: S, correct: "=", explanation: "Both are equal." },
-      { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>2 __ 0</span>", options: S, correct: ">", explanation: "2 is greater than 0." }
-    ];
-  </script>
+    <main class="quiz-container">
+      <div class="question-section">
+        <h3 id="question-text">Loading...</h3>
+        <ul class="options" id="options-list"></ul>
+      </div>
+      <div id="feedback" class="hidden"></div>
+      <div id="explanation" class="hidden"></div>
+      <button id="back-btn" class="hidden" onclick="loadPreviousQuestion()">Back</button>
+      <button id="next-btn" class="hidden" onclick="loadNextQuestion()">Next</button>
+    </main>
 
-  <div id="site-footer-placeholder"></div>
-  <script src="../../../js/script.js"></script>
-  <script src="../../../js/partials.js"></script>
-  <script>window.addEventListener("DOMContentLoaded",()=>{initMCQQuiz(questions);});</script>
-</body>
+<script>
+  const S = [">","<","="];
+  const questions = [
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>3 __ 1</span>",  options: S, correct: ">", explanation: "3 is greater than 1." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>2 __ 5</span>",  options: S, correct: "<", explanation: "2 is less than 5." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>4 __ 4</span>",  options: S, correct: "=", explanation: "Both are equal." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>9 __ 7</span>",  options: S, correct: ">", explanation: "9 is greater than 7." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>6 __ 8</span>",  options: S, correct: "<", explanation: "6 is less than 8." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>10 __ 10</span>",options: S, correct: "=", explanation: "Both are equal." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>0 __ 2</span>",  options: S, correct: "<", explanation: "0 is less than 2." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>12 __ 9</span>", options: S, correct: ">", explanation: "12 is greater than 9." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>5 __ 11</span>", options: S, correct: "<", explanation: "5 is less than 11." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>14 __ 14</span>",options: S, correct: "=", explanation: "Both are equal." },
+
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>15 __ 13</span>",options: S, correct: ">", explanation: "15 is greater than 13." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>7 __ 10</span>", options: S, correct: "<", explanation: "7 is less than 10." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>18 __ 16</span>",options: S, correct: ">", explanation: "18 is greater than 16." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>4 __ 12</span>", options: S, correct: "<", explanation: "4 is less than 12." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>20 __ 19</span>",options: S, correct: ">", explanation: "20 is greater than 19." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>3 __ 3</span>",  options: S, correct: "=", explanation: "Both are equal." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>1 __ 9</span>",  options: S, correct: "<", explanation: "1 is less than 9." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>17 __ 6</span>", options: S, correct: ">", explanation: "17 is greater than 6." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>8 __ 8</span>",  options: S, correct: "=", explanation: "Both are equal." },
+    { question: "Pick the correct sign (>, <, =) to make the statement true.<br><span style='color:black'>2 __ 0</span>",  options: S, correct: ">", explanation: "2 is greater than 0." }
+  ];
+</script>
+
+    <div id="site-footer-placeholder"></div>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/partials.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+        initMCQQuiz(questions);
+      });
+    </script>
+  </body>
 </html>
