--- a/start-page/subject_level1.html
+++ b/start-page/subject_level1.html
@@ -30,6 +30,13 @@
           <p class="card-desc">Addition, subtraction, shapes…</p>
           <a href="../start-page2/Level 1/Level1_math_options.html" class="card-btn">Start</a>
         </div>
+
+        <div class="card" data-level="M">
+          <div class="card-icon">🔭</div>
+          <h3 class="card-title">Science</h3>
+          <p class="card-desc">Universe, Plants, Animals</p>
+          <a href="../start-page2/Level 1/Level1_science_options.html" class="card-btn">Start</a>
+        </div>
         
       </div>
     </main>
