Update card title by removing emojis
Removed emoji from the card title for consistency.

--- a/start-page2/Level 1/Level1_science_options.html
+++ b/start-page2/Level 1/Level1_science_options.html
@@ -64,7 +64,7 @@
     <!-- 7 -->
     <div class="card" data-level="7">
       <div class="card-icon">H</div>
-      <h3 class="card-title">Habitats & Animals 🦌🌳</h3>
+      <h3 class="card-title">Habitats & Animals</h3>
       <p class="card-desc">Forest, desert, ocean & more</p>
       <a href="../../question/level-1/Science/level1_sci_habitats_animals.html" class="card-btn">Start</a>
     </div>
