--- a/question/level-1_Science/level1_sci_universe.html
+++ b/question/level-1_Science/level1_sci_universe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Universe</title>
-    <link rel="stylesheet" href="../../../css/question.css" />
+    <link rel="stylesheet" href="../../css/question.css" />
   </head>
   <body>
 
@@ -271,8 +271,8 @@
     </script>
 
     <div id="site-footer-placeholder"></div>
-    <script src="../../../js/script.js"></script>
-    <script src="../../../js/partials.js"></script>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/partials.js"></script>
     <script>
       window.addEventListener("DOMContentLoaded", () => {
         initMCQQuiz(questions);
