--- a/start-page/subject_level1.html
+++ b/start-page/subject_level1.html
@@ -31,7 +31,7 @@
           <a href="../start-page2/Level 1/Level1_math_options.html" class="card-btn">Start</a>
         </div>
 
-        <div class="card" data-level="M">
+        <div class="card" data-level="S">
           <div class="card-icon">🔭</div>
           <h3 class="card-title">Science</h3>
           <p class="card-desc">Universe, Plants, Animals</p>
