--- a/start-page2/Level 1/Level1_science_options.html
+++ b/start-page2/Level 1/Level1_science_options.html
@@ -17,7 +17,7 @@
     <div class="card" data-level="1">
       <div class="card-icon">U</div>
       <h3 class="card-title">Universe</h3>
-      <p class="card-desc">Stars, galaxies, Sun, Moon & more</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_universe.html" class="card-btn">Start</a>
     </div>
 
@@ -25,7 +25,7 @@
     <div class="card" data-level="2">
       <div class="card-icon">B</div>
       <h3 class="card-title">Body Parts</h3>
-      <p class="card-desc">Head, arms, legs & other parts</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_body_parts.html" class="card-btn">Start</a>
     </div>
 
@@ -33,7 +33,7 @@
     <div class="card" data-level="3">
       <div class="card-icon">P</div>
       <h3 class="card-title">Plants</h3>
-      <p class="card-desc">Roots, stems, leaves & flowers</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_plants.html" class="card-btn">Start</a>
     </div>
 
@@ -41,7 +41,7 @@
     <div class="card" data-level="4">
       <div class="card-icon">A</div>
       <h3 class="card-title">Animals</h3>
-      <p class="card-desc">Land, water & air animals</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_animals.html" class="card-btn">Start</a>
     </div>
 
@@ -49,7 +49,7 @@
     <div class="card" data-level="5">
       <div class="card-icon">O</div>
       <h3 class="card-title">Organs</h3>
-      <p class="card-desc">Heart, lungs, brain & more</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_organs.html" class="card-btn">Start</a>
     </div>
 
@@ -57,7 +57,7 @@
     <div class="card" data-level="6">
       <div class="card-icon">🪐</div>
       <h3 class="card-title">Planets</h3>
-      <p class="card-desc">Planets of the solar system</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_planets.html" class="card-btn">Start</a>
     </div>
 
@@ -65,7 +65,7 @@
     <div class="card" data-level="7">
       <div class="card-icon">H</div>
       <h3 class="card-title">Habitats & Animals</h3>
-      <p class="card-desc">Forest, desert, ocean & more</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_habitats_animals.html" class="card-btn">Start</a>
     </div>
 
@@ -73,7 +73,7 @@
     <div class="card" data-level="8">
       <div class="card-icon">I</div>
       <h3 class="card-title">Insects</h3>
-      <p class="card-desc">Ants, bees, butterflies & more</p>
+      <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_insects.html" class="card-btn">Start</a>
     </div>
   </div>
