5 math exercises added

--- a/start-page2/Level 1/Level1_math_options.html
+++ b/start-page2/Level 1/Level1_math_options.html
@@ -293,7 +293,40 @@
   <a href='../../question/Level 1 Maths/Level_1_maths_Missing_Number_0_to_20.html' class="card-btn">Start</a>
 </div>
 
+<div class="card" data-level="36">
+  <div class="card-icon">🔎</div>
+  <h3 class="card-title">Word Problems</h3>
+  <p class="card-desc">till 20</p>
+  <a href='../../question/Level 1 Maths/level_1_word_problems_till_20.html' class="card-btn">Start</a>
+</div>
 
+<div class="card" data-level="37">
+  <div class="card-icon">🔎</div>
+  <h3 class="card-title">Word Problems</h3>
+  <p class="card-desc">till 30</p>
+  <a href='../../question/Level 1 Maths/level_1_word_problems_till_30.html' class="card-btn">Start</a>
+</div>
+
+<div class="card" data-level="38">
+  <div class="card-icon">🔎</div>
+  <h3 class="card-title">Word Problems</h3>
+  <p class="card-desc">till 40</p>
+  <a href='../../question/Level 1 Maths/level_1_word_problems_till_40.html' class="card-btn">Start</a>
+</div>
+
+<div class="card" data-level="39">
+  <div class="card-icon">🔎</div>
+  <h3 class="card-title">Word Problems</h3>
+  <p class="card-desc">till 50</p>
+  <a href='../../question/Level 1 Maths/level_1_word_problems_till_50.html' class="card-btn">Start</a>
+</div>
+
+<div class="card" data-level="40">
+  <div class="card-icon">🔎</div>
+  <h3 class="card-title">Ascending & Descending Order till 50</h3>
+  <p class="card-desc"></p>
+  <a href='../../question/Level 1 Maths/level_1_ascending_and_descending_order_till_50.html' class="card-btn">Start</a>
+</div>
       
     </div>
   </main>
