--- a/start-page2/Level 1/Level1_science_options.html
+++ b/start-page2/Level 1/Level1_science_options.html
@@ -116,6 +116,22 @@
       <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_stateofmatter.html" class="card-btn">Start</a>
     </div>
+    
+                  <!-- 14 -->
+    <div class="card" data-level="14">
+      <div class="card-icon">L</div>
+      <h3 class="card-title">Living & Non Living Things</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level-1_Science/level1_sci_living&non.html" class="card-btn">Start</a>
+    </div>
+    
+                    <!-- 15 -->
+    <div class="card" data-level="15">
+      <div class="card-icon">W</div>
+      <h3 class="card-title">Weather</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level-1_Science/level1_weather.html" class="card-btn">Start</a>
+    </div>
   </div>
 </main>
 
