--- a/start-page/subject_level1.html
+++ b/start-page/subject_level1.html
@@ -38,6 +38,13 @@
           <a href="../start-page2/Level 1/Level1_science_options.html" class="card-btn">Start</a>
         </div>
         
+        <div class="card" data-level="G">
+          <div class="card-icon">🧠</div>
+          <h3 class="card-title">General Knowledge</h3>
+          <p class="card-desc"></p>
+          <a href="../start-page2/Level 1/Level1_gk_options.html" class="card-btn">Start</a>
+        </div>
+        
       </div>
     </main>
 
