--- a/start-page2/Level 1/Level1_gk_options.html
+++ b/start-page2/Level 1/Level1_gk_options.html
@@ -15,26 +15,26 @@
   <div class="card-grid">
    <!-- 1 -->
     <div class="card" data-level="1">
-      <div class="card-icon">B</div>
-      <h3 class="card-title">Body Parts</h3>
+      <div class="card-icon">1</div>
+      <h3 class="card-title">Level 1</h3>
       <p class="card-desc"></p>
-      <a href="../../question/level-1_Science/level1_sci_body_parts.html" class="card-btn">Start</a>
+      <a href="../../question/level-1_GK/level1_gk_l1.html" class="card-btn">Start</a>
     </div>
 
     <!-- 2 -->
     <div class="card" data-level="2">
-      <div class="card-icon">P</div>
-      <h3 class="card-title">Plants</h3>
+      <div class="card-icon">2</div>
+      <h3 class="card-title">Level 2</h3>
       <p class="card-desc"></p>
-      <a href="../../question/level-1_Science/level1_sci_plants.html" class="card-btn">Start</a>
+      <a href="../../question/level-1_GK/level1_gk_l2.html" class="card-btn">Start</a>
     </div>
 
     <!-- 3 -->
     <div class="card" data-level="3">
-      <div class="card-icon">A</div>
-      <h3 class="card-title">Animals</h3>
+      <div class="card-icon">3</div>
+      <h3 class="card-title">Level 3</h3>
       <p class="card-desc"></p>
-      <a href="../../question/level-1_Science/level1_sci_animals.html" class="card-btn">Start</a>
+      <a href="../../question/level-1_GK/level1_gk_l3.html" class="card-btn">Start</a>
     </div>
   </div>
 </main>
