--- a/question/level_1_GK/level1_gk_l2.html
+++ b/question/level_1_GK/level1_gk_l2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Adjectives</title>
     <!-- point to your question.css in the root css/ folder -->
-    <link rel="stylesheet" href="../../../css/question.css" />
+    <link rel="stylesheet" href="../../css/question.css" />
   </head>
   <body>
 
@@ -183,8 +183,8 @@
     <!-- Professional Footer -->
     <div id="site-footer-placeholder"></div>
     <!-- point to your main quiz logic -->
-    <script src="../../../js/script.js"></script>
-    <script src="../../../js/partials.js"></script>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/partials.js"></script>
     <script>
       window.addEventListener("DOMContentLoaded", () => {
     initMCQQuiz(questions);
