--- a/question/level_1_GK/level1_gk_l2.html
+++ b/question/level_1_GK/level1_gk_l2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Adjectives</title>
+    <title>Level 2</title>
     <!-- point to your question.css in the root css/ folder -->
     <link rel="stylesheet" href="../../css/question.css" />
   </head>
