--- a/start-page2/Level 1/Level1_gk_options.html
+++ b/start-page2/Level 1/Level1_gk_options.html
@@ -60,6 +60,14 @@
       <p class="card-desc"></p>
       <a href="../../question/level_1_GK/level1_gk_l6.html" class="card-btn">Start</a>
     </div>
+    
+    <!-- 7 -->
+    <div class="card" data-level="7">
+      <div class="card-icon">7</div>
+      <h3 class="card-title">Level 7</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level_1_GK/level1_gk_l7.html" class="card-btn">Start</a>
+    </div>
   </div>
 </main>
 
