--- a/start-page2/Level 1/Level1_gk_options.html
+++ b/start-page2/Level 1/Level1_gk_options.html
@@ -68,6 +68,22 @@
       <p class="card-desc"></p>
       <a href="../../question/level_1_GK/level1_gk_l7.html" class="card-btn">Start</a>
     </div>
+    
+    <!-- 8 -->
+    <div class="card" data-level="8">
+      <div class="card-icon">8</div>
+      <h3 class="card-title">Level 8</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level_1_GK/level1_gk_l8.html" class="card-btn">Start</a>
+    </div>
+    
+    <!-- 9 -->
+    <div class="card" data-level="9">
+      <div class="card-icon">9</div>
+      <h3 class="card-title">Level 9</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level_1_GK/level1_gk_l9.html" class="card-btn">Start</a>
+    </div>
   </div>
 </main>
 
