--- a/start-page2/Level 1/Level1_gk_options.html
+++ b/start-page2/Level 1/Level1_gk_options.html
@@ -84,6 +84,15 @@
       <p class="card-desc"></p>
       <a href="../../question/level_1_GK/level1_gk_l9.html" class="card-btn">Start</a>
     </div>
+    
+     <!-- 10 -->
+    <div class="card" data-level="10">
+      <div class="card-icon">10</div>
+      <h3 class="card-title">Level 10</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level_1_GK/level1_gk_l10.html" class="card-btn">Start</a>
+    </div>
+    
   </div>
 </main>
 
