--- a/start-page2/Level 1/Level1_gk_options.html
+++ b/start-page2/Level 1/Level1_gk_options.html
@@ -116,6 +116,14 @@
       <p class="card-desc"></p>
       <a href="../../question/level_1_GK/level1_gk_l13.html" class="card-btn">Start</a>
     </div>
+
+     <!-- 14 -->
+    <div class="card" data-level="13">
+      <div class="card-icon">14</div>
+      <h3 class="card-title">Level 14</h3>
+      <p class="card-desc"></p>
+      <a href="../../question/level_1_GK/level1_gk_l14.html" class="card-btn">Start</a>
+    </div>
   </div>
 </main>
 
